--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node hapi.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
